--- a/app/src/App.css
+++ b/app/src/App.css
@@ -7,6 +7,31 @@
   pointer-events: none;
 }
 
+button {
+  padding: 10px 20px;
+  margin-right: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  font-weight: 400;
+  border: none;
+  outline: none;
+}
+
+.inactive {
+  color: #555;
+  background-color: rgb(255 255 255);
+  border: 1px solid #555;
+}
+
+.active {
+  color: white;
+  background: #555;
+}
+
+.toolbar {
+  margin: 25px 0px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
